--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -3,6 +3,8 @@
   border-right: 0.5px solid rgb(145, 144, 144);
   border-left: 0.5px solid rgb(145, 144, 144);
   height: 100%;
+  display: flex;
+  flex-direction: column;
   .top {
     display: flex;
     justify-content: space-between;
@@ -35,9 +37,81 @@
       display: flex;
       gap: 20px;
       padding: 10px;
+      cursor: pointer;
       img {
         width: 20px;
         height: 20px;
+      }
+    }
+  }
+  .centre {
+    padding: 10px;
+    flex: 1;
+    overflow: scroll;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    .message {
+      max-width: 70%;
+      display: flex;
+      img {
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        object-fit: cover;
+      }
+      .texts {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        p {
+          display: flex;
+          font-size: 15px;
+          background-color: rgba(76, 81, 77, 0.466);
+          border-radius: 0px 10px 10px 10px;
+          padding: 5px;
+        }
+        span {
+          font-size: 13px;
+          color: white;
+        }
+      }
+    }
+
+    .message-own {
+      align-self: flex-end;
+      max-width: 70%;
+      margin-left: auto;
+      .texts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        box-sizing: border-box;
+
+        img{
+          width: 90%;
+          object-fit: cover;
+          height: 30vh;
+          border-radius: 10px
+        }
+
+        p {
+          display: block;
+          width: 100%;
+          overflow-wrap: break-word;
+          margin: 0;
+          font-size: 15px;
+          background-color: rgba(52, 224, 149, 0.371);
+          border-radius: 10px 0 10px 10px;
+          padding: 5px 0px 5px 5px;
+        }
+        span {
+          font-size: 13px;
+          color: white;
+        }
       }
     }
   }
@@ -46,12 +120,21 @@
     display: flex;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.75);
+    margin-top: auto;
+    height: 50px;
+
     .emogi {
+      position: relative;
       padding: 7px 0px 7px 4px;
       img {
         width: 20px;
         height: 20px;
         cursor: pointer;
+      }
+      .picker {
+        position: absolute;
+        bottom: 50px;
+        left: 1px;
       }
     }
     .attach {
@@ -72,21 +155,27 @@
     .input {
       flex: 1;
       display: flex;
-      background: none;
-      outline: none;
-      border: none;
-      color: white;
+      padding-left: 8px;
+
       input {
         flex: 1;
+        background: none;
+        outline: none;
+        border: none;
+        color: white;
       }
-      button{
+      button {
         padding-right: 5px;
         padding-left: 5px;
         cursor: pointer;
+        background: none;
+        outline: none;
+        border: none;
+        color: white;
       }
     }
-    .mic{
-        padding-right: 5px;
+    .mic {
+      padding-right: 5px;
     }
   }
 }
