send and recieve chats

--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -106,7 +106,7 @@
           font-size: 15px;
           background-color: rgba(52, 224, 149, 0.371);
           border-radius: 10px 0 10px 10px;
-          padding: 5px 0px 5px 5px;
+          padding: 5px;
         }
         span {
           font-size: 13px;
