--- a/src/components/Chat/Chat.css
+++ b/src/components/Chat/Chat.css
@@ -56,9 +56,9 @@
       max-width: 70%;
       display: flex;
       img {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
+        width: 70%;
+        height: 30vh;
+        border-radius: 10px;
         object-fit: cover;
       }
       .texts {
@@ -91,11 +91,11 @@
         align-items: flex-end;
         box-sizing: border-box;
 
-        img{
+        img {
           width: 90%;
           object-fit: cover;
           height: 30vh;
-          border-radius: 10px
+          border-radius: 10px;
         }
 
         p {
